<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <Spinner
            android:id="@+id/spinnerCoffees"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select_coffee" />

        <Spinner
            android:id="@+id/spinnerRoasts"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:prompt="@string/select_roast" />

        <EditText
            android:id="@+id/editTextDate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/createDate" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/createAcidity" />

        <RatingBar
            android:id="@+id/ratingBarAcidity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Flavour" />

        <RatingBar
            android:id="@+id/ratingBarFlavour"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Sweetness" />

        <RatingBar
            android:id="@+id/ratingBarSweetness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Bitterness" />

        <RatingBar
            android:id="@+id/ratingBarBitterness"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Tactile" />

        <RatingBar
            android:id="@+id/ratingBarTactile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Balance" />

        <RatingBar
            android:id="@+id/ratingBarBalance"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:stepSize="1" />

        <!-- Notes input -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Notes" />

        <EditText
            android:id="@+id/editTextNotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/buttonSaveCupping"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/save_cupping" />

        <Button
            android:id="@+id/buttonCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/addCuppingCancel"
            android:backgroundTint="@color/dark_gray"/>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>
