<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:backgroundTint="@color/white">


    <ImageView
        android:id="@+id/mainImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha=".25"
        android:src="@drawable/coffeeplant" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50dp"
        android:src="@mipmap/ic_launcher"/>


    <TextView
        android:id="@+id/mainTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/LoginTitle"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/logo"
        android:fontFamily="@font/alumnisans_bold"
        android:textColor="@color/red"
        android:textAllCaps="true"
        android:textSize="50sp"/>


    <!-- Username EditText -->
    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/username"
        android:inputType="text"
        android:layout_above="@id/editTextPassword"
        android:layout_marginHorizontal="20dp"/>

    <!-- Password EditText -->
    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:layout_above="@id/buttonLogin"
        android:layout_marginHorizontal="20dp"/>

    <!-- Login Button -->
    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/button_login"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="150dp"
        android:layout_marginHorizontal="20dp"
        app:backgroundTint="@color/red"/>

    <com.google.android.material.button.MaterialButton
        style="@style/Widget.AppCompat.Button.Colored"
        android:id="@+id/buttonSignUp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/signUpText"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="100dp"
        app:backgroundTint="@color/white"
        android:textColor="@color/red"/>

  </RelativeLayout>